# embedded-cal

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  no-squash-fixup.yml
ariel-tests/: Cargo.toml  laze-project.yml
ariel-tests/src/: configured_cal.rs  main.rs
embedded-cal/: Cargo.toml
embedded-cal-core/: Cargo.toml
embedded-cal-libcrux/: Cargo.toml
embedded-cal-libcrux/src/: aead.rs  empty_impls.rs  hash.rs  lib.rs
embedded-cal-nrf54l15/: Cargo.toml  memory.x
embedded-cal-nrf54l15/src/: aead.rs  aead2.rs  descriptor.rs  dh.rs  empty_impls.rs  hkdf.rs  inner.rs  lib.rs  microcode.rs  try_rng.rs
embedded-cal-nrf54l15/src/microcode/: data.rs
embedded-cal-nrf54l15/tests/: integration.rs
embedded-cal-rustcrypto/: Cargo.toml
embedded-cal-rustcrypto/src/: aead.rs  dh.rs  hash.rs  hmac.rs  lib.rs  rng.rs
embedded-cal-software/: Cargo.toml
embedded-cal-software-demo/: Cargo.toml  README.md
embedded-cal-software-demo/src/: dh.rs  hash.rs  hmac.rs  lib.rs  rng.rs
embedded-cal-software-demo/src/tests/: dummy_sha256.rs
embedded-cal-software/src/: hash.rs  hkdf.rs  hmac.rs  lib.rs
embedded-cal-software/src/tests/: dummy_sha256.rs
embedded-cal-stm32wba55/: Cargo.toml  device.x  memory.x
embedded-cal-stm32wba55/src/: aead.rs  dh.rs  empty_impls.rs  hkdf.rs  inner.rs  lib.rs  try_rng.rs
embedded-cal-stm32wba55/tests/: integration.rs
embedded-cal/src/: aead.rs  dh.rs  empty.rs  hash.rs  hkdf.rs  hmac.rs  lib.rs  p256.rs  rng.rs
examples/stm32wba55cg/src/: main.rs
testvectors/src/: dh.rs  lib.rs  tv.rs
(+4 files in other folders)
